--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -1,3 +1,13 @@
 .instruction {
     text-align: justify;
 }
+
+.text-color {
+    color: white;
+}
+
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
