--- a/src/app/notes/note/note.component.html
+++ b/src/app/notes/note/note.component.html
@@ -1,5 +1,5 @@
 <div [ngStyle]="{'background-color': note == null ? 'pink' : note.backgroundColor}"
-   class="card" style=" border:2px groove; margin: 5px;">
+   class="card" style=" border:2px groove; margin: 5px;" appBorderOnHover>
   <div class="card-body" style="padding:8px; margin-top:8px;">
     <!-- Title -->            
     <div>
