--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container-fluid row-fluid app-div">
-    <app-navigation ></app-navigation>
+    <app-header ></app-header>
     <router-outlet ></router-outlet>
 </div>
