--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -5,12 +5,20 @@
         <div class="card">
           <div class="card-header" id="headingOne">
             <h5 class="mb-0">
-              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              <button class="btn btn-link" 
+                type="button" 
+                data-toggle="collapse" 
+                data-target="#collapseOne" 
+                aria-expanded="true" 
+                aria-controls="collapseOne">
                 Alterar Senha
               </button>
             </h5>
           </div>
-          <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#configurations">
+          <div id="collapseOne" 
+            class="collapse" 
+            aria-labelledby="headingOne" 
+            data-parent="#configurations">
             <div class="card-body">
                 <div class="row">
                     <div class="offset-3"></div>
@@ -91,7 +99,7 @@
           </div>
         </div>
         <!-- Disable account -->
-        <div class="card">
+        <!-- <div class="card">
           <div class="card-header" id="headingThree">
             <h5 class="mb-0">
               <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -99,12 +107,12 @@
               </button>
             </h5>
           </div>
-          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#configurations">
+          <div id="collapseThree" class="collapse show" aria-labelledby="headingThree" data-parent="#configurations">
             <div class="card-body">
               Em breve.
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
 
 </div>
