Fix password change and componentize password form

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -75,7 +75,7 @@
 
         <div style="display: flex; align-items: center; flex-direction: column">
           <div>
-            <ngx-recaptcha2 
+            <ngx-recaptcha2 #captchaElem
               [siteKey]="key" 
               formControlName="recaptcha"
               size="compact"
