--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -23,58 +23,7 @@
                 <div class="row">
                     <div class="offset-3"></div>
                     <div class="col-md-6">
-                      <form   
-                        [formGroup]="updatePasswordForm"
-                        class="border border-light p-5 mt-5 center-block" 
-                        style="background-color: white; border-radius: 25px;" 
-                        (submit)="submit()" #f="ngForm" novalidate>
-
-                        <!-- Password field -->
-                        <div class="form-group">
-                          <div>
-                            <label for="password">Nova senha</label>
-                            <input type="password" 
-                              formControlName="password"
-                              class="form-control"  
-                              placeholder="Senha (entre 4 e 12 caracteres)"
-                              minlength="4" 
-                              maxlength="12">
-                              <div class="text-danger">
-                                <small class="d-block" *ngIf="updatePasswordForm.get('password').errors?.required">Senha é obrigatória</small>
-                                <small class="d-block" *ngIf="updatePasswordForm.get('password').errors?.minlength">No mínimo 4 caracteres</small>
-                                <small class="d-block" *ngIf="updatePasswordForm.get('password').errors?.maxlength">No máximo 12 caracteres</small>
-                              </div>
-                          </div>
-                          <div style="margin-top: 10px;">
-                            <label for="password">Confirmação de senha</label> 
-                            <input type="password" 
-                              formControlName="passwordConfirmation"
-                              class="form-control" 
-                              placeholder="Senha" 
-                              minlength="4" maxlength="12">
-                              <small class="text-danger d-block" *ngIf="updatePasswordForm.get('passwordConfirmation').errors?.mustMatch">As senhas não conferem</small>
-                          </div>
-                        </div>       
-                        <div style="display: flex; align-items: center; flex-direction: column">
-                          <div>
-                            <ngx-recaptcha2 #captchaElem
-                              [siteKey]="key" 
-                              formControlName="recaptcha"
-                              size="compact"
-                              name="captchaElem"
-                              (success)="handleSuccess($event)">
-                            </ngx-recaptcha2>
-                            <small class="text-danger" *ngIf="captchaError">Captcha is required!</small>
-                          </div>
-                
-                          <div class="text-center">
-                            <button class="btn btn-info my-4" [disabled]="updatePasswordForm.invalid || updatePasswordForm.pending || !captchaSuccess">
-                              <span *ngIf="logging" class="spinner-border spinner-border-sm text-warning" role="status" aria-hidden="true"></span>
-                              Cadastrar
-                            </button>
-                          </div>
-                        </div>
-                      </form>
+                      <app-password (success)="closeCard($event)"></app-password>
                     </div>
                     <div class="offset-3"></div>
                   </div>
@@ -83,21 +32,6 @@
           <!-- Messages component -->
           <app-toaster></app-toaster>
         </div>
-        <!-- Disable account -->
-        <!-- <div class="card">
-          <div class="card-header" id="headingThree">
-            <h5 class="mb-0">
-              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Desativar conta
-              </button>
-            </h5>
-          </div>
-          <div id="collapseThree" class="collapse show" aria-labelledby="headingThree" data-parent="#configurations">
-            <div class="card-body">
-              Em breve.
-            </div>
-          </div>
-        </div> -->
       </div>
 
 </div>
