Fix prod notes and auth urls

--- a/src/app/configuration/password/password.component.html
+++ b/src/app/configuration/password/password.component.html
@@ -44,7 +44,7 @@
 
     <div class="text-center">
       <button class="btn btn-info my-4" [disabled]="updatePasswordForm.invalid || updatePasswordForm.pending || !captchaSuccess">
-        <span *ngIf="logging" class="spinner-border spinner-border-sm text-warning" role="status" aria-hidden="true"></span>
+        <span *ngIf="loading" class="spinner-border spinner-border-sm text-warning" role="status" aria-hidden="true"></span>
         Cadastrar
       </button>
     </div>
