--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -23,7 +23,7 @@
                 <div class="row">
                     <div class="offset-3"></div>
                     <div class="col-md-6">
-                      <app-password (success)="closeCard($event)"></app-password>
+                      <app-password (success)="closeCard()"></app-password>
                     </div>
                     <div class="offset-3"></div>
                   </div>
